refactor : testcode 장바구니 로그인 로그아웃 상품서비스